--- a/index.html
+++ b/index.html
@@ -2,16 +2,23 @@
 <html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8">
-  <title>CyberMatrix Giriş</title>
+  <title>Welcome</title>
   <style>
     :root {
       --bg-color: #ffffff;
       --text-color: #000000;
+      --input-bg: #f0f0f0;
+      --button-bg: #007BFF;
+      --button-text: #ffffff;
     }
     [data-theme="dark"] {
-      --bg-color: #121212;
-      --text-color: #f0f0f0;
+      --bg-color: #1e1e1e;
+      --text-color: #f5f5f5;
+      --input-bg: #333333;
+      --button-bg: #4e8cff;
+      --button-text: #ffffff;
     }
+
     body {
       margin: 0;
       padding: 0;
@@ -19,80 +26,114 @@
       background-color: var(--bg-color);
       color: var(--text-color);
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       height: 100vh;
       transition: background-color 0.4s, color 0.4s;
     }
-    .logo {
-      max-width: 200px;
-      margin-bottom: 30px;
+
+    .container {
+      text-align: center;
+      max-width: 400px;
+      width: 90%;
     }
+
     #helloText {
-      font-size: 40px;
-      font-weight: bold;
+      font-size: 36px;
+      font-weight: 600;
       border-right: 3px solid var(--text-color);
       white-space: nowrap;
       overflow: hidden;
       width: 0;
-      animation: typing 2s steps(6, end) forwards;
+      margin-bottom: 40px;
+      animation: typing 2.5s steps(6, end) forwards;
     }
+
     @keyframes typing {
       from { width: 0; }
       to { width: 6ch; }
     }
-    #formContainer {
-      margin-top: 40px;
-      text-align: center;
+
+    .form {
       display: none;
+      flex-direction: column;
+      gap: 15px;
     }
-    input, select, button {
-      padding: 10px;
-      margin: 8px;
+
+    input, select {
+      padding: 12px;
       font-size: 16px;
+      width: 100%;
+      border: none;
+      border-radius: 6px;
+      background-color: var(--input-bg);
+      color: var(--text-color);
     }
+
+    button {
+      padding: 12px;
+      font-size: 16px;
+      background-color: var(--button-bg);
+      color: var(--button-text);
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
     .theme-toggle {
       position: absolute;
       top: 20px;
       right: 20px;
       padding: 8px 12px;
+      background: none;
+      border: 1px solid var(--text-color);
+      border-radius: 6px;
       cursor: pointer;
+      color: var(--text-color);
+      transition: all 0.3s;
+    }
+
+    .theme-toggle:hover {
+      background-color: var(--text-color);
+      color: var(--bg-color);
     }
   </style>
 </head>
 <body>
 
-  <button class="theme-toggle" onclick="toggleTheme()">Dark/Light</button>
+  <button class="theme-toggle" onclick="toggleTheme()">Dark / Light</button>
 
-  <img src="file-VJeaXrEN23dAone3ruiSBH" alt="Logo" class="logo">
+  <div class="container">
+    <div id="helloText">Hello!</div>
 
-  <div id="helloText">Hello!</div>
-
-  <div id="formContainer">
-    <h2>Adınızı daxil edin və keçin</h2>
-    <input type="text" id="name" placeholder="Adınız"><br>
-    <select id="siteSelect">
-      <option value="https://sites.google.com/view/cybermatrix-azerbaijan-company?usp=sharing">CyberMatrix</option>
-      <option value="https://codematrix-ac.github.io/CodeMatrix/">CodeMatrix</option>
-    </select><br>
-    <button onclick="goToSite()">Davam et</button>
+    <div class="form" id="formContainer">
+      <input type="text" id="name" placeholder="Adınız">
+      <select id="siteSelect">
+        <option value="https://sites.google.com/view/cybermatrix-azerbaijan-company?usp=sharing">CyberMatrix</option>
+        <option value="https://codematrix-ac.github.io/CodeMatrix/">CodeMatrix</option>
+      </select>
+      <button onclick="goToSite()">Davam et</button>
+    </div>
   </div>
 
   <script>
-    // Typing effekti bitəndən sonra form görünsün
     setTimeout(() => {
-      document.getElementById("formContainer").style.display = "block";
-    }, 2500);
-
-    function goToSite() {
-      const site = document.getElementById("siteSelect").value;
-      window.location.href = site;
-    }
+      document.getElementById("formContainer").style.display = "flex";
+    }, 2700);
 
     function toggleTheme() {
       const html = document.documentElement;
       html.dataset.theme = html.dataset.theme === "dark" ? "light" : "dark";
+    }
+
+    function goToSite() {
+      const site = document.getElementById("siteSelect").value;
+      window.location.href = site;
     }
   </script>
 
