--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       --button-bg: #007BFF;
       --button-text: #ffffff;
     }
+
     [data-theme="dark"] {
       --bg-color: #1e1e1e;
       --text-color: #f5f5f5;
@@ -39,28 +40,23 @@
     }
 
     #helloText {
-      font-size: 36px;
-      font-weight: 600;
-      border-right: 3px solid var(--text-color);
-      white-space: nowrap;
-      overflow: hidden;
-      width: 0;
-      margin-bottom: 40px;
-      animation: typing 2.5s steps(6, end) forwards;
-    }
-
-    @keyframes typing {
-      from { width: 0; }
-      to { width: 6ch; }
-    }
-
-    .form {
+      font-size: 38px;
+      font-weight: bold;
+      opacity: 0;
+      transform: scale(0.8);
+      animation: fadeInZoom 2s ease forwards;
+      margin-bottom: 20px;
       display: none;
-      flex-direction: column;
-      gap: 15px;
     }
 
-    input, select {
+    @keyframes fadeInZoom {
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+
+    #languageSelect, input, select, button {
       padding: 12px;
       font-size: 16px;
       width: 100%;
@@ -68,21 +64,25 @@
       border-radius: 6px;
       background-color: var(--input-bg);
       color: var(--text-color);
+      margin-top: 10px;
     }
 
     button {
-      padding: 12px;
-      font-size: 16px;
       background-color: var(--button-bg);
       color: var(--button-text);
-      border: none;
-      border-radius: 6px;
       cursor: pointer;
       transition: background 0.3s;
     }
 
     button:hover {
       background-color: #0056b3;
+    }
+
+    .form {
+      display: none;
+      flex-direction: column;
+      gap: 15px;
+      margin-top: 30px;
     }
 
     .theme-toggle {
@@ -109,9 +109,19 @@
   <button class="theme-toggle" onclick="toggleTheme()">Dark / Light</button>
 
   <div class="container">
+    <!-- Hello text appears first -->
     <div id="helloText">Hello!</div>
 
-    <div class="form" id="formContainer">
+    <!-- Language Selection -->
+    <select id="languageSelect" style="display:none;">
+      <option value="">-- Dil seçin / Choose language --</option>
+      <option value="az">Azərbaycan dili</option>
+      <option value="en">English</option>
+      <option value="tr">Türkçe</option>
+    </select>
+
+    <!-- Form for user details -->
+    <div class="form" id="formContainer" style="display:none;">
       <input type="text" id="name" placeholder="Adınız">
       <select id="siteSelect">
         <option value="https://sites.google.com/view/cybermatrix-azerbaijan-company?usp=sharing">CyberMatrix</option>
@@ -122,9 +132,37 @@
   </div>
 
   <script>
+    const translations = {
+      az: { name: "Adınız", button: "Davam et", hello: "Salam!" },
+      en: { name: "Your name", button: "Continue", hello: "Hello!" },
+      tr: { name: "Adınız", button: "Devam et", hello: "Merhaba!" }
+    };
+
+    // Show "Hello!" animation first
     setTimeout(() => {
-      document.getElementById("formContainer").style.display = "flex";
-    }, 2700);
+      document.getElementById("helloText").style.display = "block";
+    }, 500); // After 500ms, "Hello!" will appear
+
+    // When the user selects a language, show form
+    document.getElementById("helloText").addEventListener("animationend", () => {
+      document.getElementById("languageSelect").style.display = "block"; // Show language select
+    });
+
+    document.getElementById("languageSelect").addEventListener("change", () => {
+      const lang = document.getElementById("languageSelect").value;
+      if (!lang) return;
+
+      const t = translations[lang];
+
+      // Update placeholders and button text according to language
+      document.getElementById("name").placeholder = t.name;
+      document.querySelector("button").innerText = t.button;
+
+      // Show form after language selection
+      setTimeout(() => {
+        document.getElementById("formContainer").style.display = "flex";
+      }, 500);
+    });
 
     function toggleTheme() {
       const html = document.documentElement;
