--- a/index.html
+++ b/index.html
@@ -43,9 +43,15 @@
       font-size: 32px;
       font-weight: 600;
       opacity: 0;
-      transition: opacity 0.4s ease;
+      animation: fadeIn 1s forwards;
       margin-bottom: 20px;
       min-height: 50px;
+    }
+
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+      }
     }
 
     #languageSelect, input, select, button {
@@ -101,7 +107,7 @@
   <button class="theme-toggle" onclick="toggleTheme()">Dark / Light</button>
 
   <div class="container">
-    <h1><span id="typedText"></span></h1>
+    <h1><span id="typedText">Welcome to CodeMatrix.</span></h1>
 
     <select id="languageSelect" style="display:none;">
       <option value="">-- Dil seçin / Choose language --</option>
@@ -128,10 +134,6 @@
     };
 
     document.addEventListener("DOMContentLoaded", () => {
-      const typedText = document.getElementById("typedText");
-      typedText.textContent = "Welcome to CodeMatrix.";
-      typedText.style.opacity = "1"; // Tündləşmə animasiyası
-
       setTimeout(() => {
         document.getElementById("languageSelect").style.display = "block";
       }, 800); // Dil seçimi görünəcək
