--- a/index.html
+++ b/index.html
@@ -1,135 +1,166 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Matrix with Questions</title>
+  <title>Welcome</title>
   <style>
+    :root {
+      --bg-color: #ffffff;
+      --text-color: #000000;
+      --input-bg: #f0f0f0;
+      --button-bg: #007BFF;
+      --button-text: #ffffff;
+    }
+
+    [data-theme="dark"] {
+      --bg-color: #1e1e1e;
+      --text-color: #f5f5f5;
+      --input-bg: #333333;
+      --button-bg: #4e8cff;
+      --button-text: #ffffff;
+    }
+
     body {
       margin: 0;
       padding: 0;
-      background-color: black;
-      color: green;
-      font-family: 'Courier New', monospace;
-      height: 100vh;
-      overflow: hidden;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 100vh;
+      transition: background-color 0.4s, color 0.4s;
     }
 
-    .matrix {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-      pointer-events: none;
-    }
-
-    .matrix span {
-      position: absolute;
-      top: -100px;
-      color: rgba(0, 255, 0, 0.8);
-      font-size: 24px;
-      animation: fall 5s linear infinite;
-    }
-
-    @keyframes fall {
-      0% {
-        top: -100px;
-      }
-      100% {
-        top: 100vh;
-      }
-    }
-
-    .content {
-      z-index: 2;
-      color: white;
-      font-size: 40px;
+    .container {
       text-align: center;
-      animation: matrixText 3s infinite;
-      position: relative;
+      max-width: 400px;
+      width: 90%;
     }
 
-    @keyframes matrixText {
-      0% { opacity: 0; }
-      50% { opacity: 1; }
-      100% { opacity: 0; }
-    }
-
-    .question-container {
-      z-index: 3;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      text-align: center;
-    }
-
-    .question {
-      font-size: 24px;
-      margin-bottom: 20px;
+    #typedText {
+      font-size: 32px;
+      font-weight: 600;
       opacity: 0;
-      animation: fadeIn 2s forwards;
+      animation: fadeIn 1s forwards;
+      margin-bottom: 20px;
+      min-height: 50px;
     }
 
     @keyframes fadeIn {
-      0% { opacity: 0; }
-      100% { opacity: 1; }
+      to {
+        opacity: 1;
+      }
+    }
+
+    #languageSelect, input, select, button {
+      padding: 12px;
+      font-size: 16px;
+      width: 100%;
+      border: none;
+      border-radius: 6px;
+      background-color: var(--input-bg);
+      color: var(--text-color);
+      margin-top: 10px;
+    }
+
+    button {
+      background-color: var(--button-bg);
+      color: var(--button-text);
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    .form {
+      display: none;
+      flex-direction: column;
+      gap: 15px;
+      margin-top: 30px;
+    }
+
+    .theme-toggle {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      padding: 8px 12px;
+      background: none;
+      border: 1px solid var(--text-color);
+      border-radius: 6px;
+      cursor: pointer;
+      color: var(--text-color);
+      transition: all 0.3s;
+    }
+
+    .theme-toggle:hover {
+      background-color: var(--text-color);
+      color: var(--bg-color);
     }
   </style>
 </head>
 <body>
 
-  <!-- Matrix effect - falling characters -->
-  <div class="matrix">
-    <span style="left: 50px; animation-delay: 0s;">1</span>
-    <span style="left: 150px; animation-delay: 2s;">0</span>
-    <span style="left: 250px; animation-delay: 1s;">1</span>
-    <span style="left: 350px; animation-delay: 3s;">0</span>
-    <span style="left: 450px; animation-delay: 0.5s;">1</span>
-    <span style="left: 550px; animation-delay: 1.5s;">1</span>
-    <span style="left: 650px; animation-delay: 2.5s;">0</span>
-    <span style="left: 750px; animation-delay: 1s;">1</span>
-  </div>
+  <button class="theme-toggle" onclick="toggleTheme()">Dark / Light</button>
 
-  <!-- Questions Section -->
-  <div class="question-container">
-    <div class="question" id="question1">What is your name?</div>
-    <div class="question" id="question2" style="animation-delay: 4s;">Where are you from?</div>
-    <div class="question" id="question3" style="animation-delay: 8s;">What is your favorite color?</div>
+  <div class="container">
+    <h1><span id="typedText">Welcome to CodeMatrix.</span></h1>
+
+    <select id="languageSelect" style="display:none;">
+      <option value="">-- Dil seçin / Choose language --</option>
+      <option value="az">Azərbaycan dili</option>
+      <option value="en">English</option>
+      <option value="tr">Türkçe</option>
+    </select>
+
+    <div class="form" id="formContainer" style="display:none;">
+      <input type="text" id="name" placeholder="Adınız">
+      <select id="siteSelect">
+        <option value="https://sites.google.com/view/cybermatrix-azerbaijan-company?usp=sharing">CyberMatrix</option>
+        <option value="https://sites.google.com/view/codematrixcompany/ev">CodeMatrix</option>
+      </select>
+      <button onclick="goToSite()">Davam et</button>
+    </div>
   </div>
 
   <script>
-    // Create multiple falling characters for the matrix effect
-    const matrix = document.querySelector('.matrix');
-    const chars = ['1', '0', '1', '0', '1', '0', '1', '0', '1', '1', '0'];
-    let numChars = 100;
-    
-    // Create the falling text elements dynamically
-    for (let i = 0; i < numChars; i++) {
-      const span = document.createElement('span');
-      span.textContent = chars[Math.floor(Math.random() * chars.length)];
-      span.style.left = `${Math.random() * 100}vw`;
-      span.style.animationDelay = `${Math.random() * 5}s`;
-      matrix.appendChild(span);
+    const translations = {
+      az: { name: "Adınız", button: "Davam et", hello: "Salam!" },
+      en: { name: "Your name", button: "Continue", hello: "Hello!" },
+      tr: { name: "Adınız", button: "Devam et", hello: "Merhaba!" }
+    };
+
+    document.addEventListener("DOMContentLoaded", () => {
+      setTimeout(() => {
+        document.getElementById("languageSelect").style.display = "block";
+      }, 800); // Dil seçimi görünəcək
+    });
+
+    document.getElementById("languageSelect").addEventListener("change", () => {
+      const lang = document.getElementById("languageSelect").value;
+      if (!lang) return;
+
+      const t = translations[lang];
+      document.getElementById("name").placeholder = t.name;
+      document.querySelector("#formContainer button").innerText = t.button;
+
+      setTimeout(() => {
+        document.getElementById("formContainer").style.display = "flex";
+      }, 500);
+    });
+
+    function toggleTheme() {
+      const html = document.documentElement;
+      html.dataset.theme = html.dataset.theme === "dark" ? "light" : "dark";
     }
 
-    // Add functionality to fade in questions sequentially
-    let questionIndex = 1;
-    const questionElements = document.querySelectorAll('.question');
-
-    // Show next question every 4 seconds
-    setInterval(() => {
-      if (questionIndex < questionElements.length) {
-        questionElements[questionIndex].style.animation = 'fadeIn 2s forwards';
-        questionIndex++;
-      }
-    }, 4000);
+    function goToSite() {
+      const site = document.getElementById("siteSelect").value;
+      window.location.href = site;
+    }
   </script>
 
 </body>
