--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       text-align: center;
       padding: 20px;
     }
+    label {
+      color: white;
+      font-size: 18px;
+    }
     .language-select, .name-input, .site-select {
       margin-top: 20px;
       opacity: 0;
